[package]
name = "ovit-tools"
version = "0.0.0-development"
authors = ["Kepler Sticka-Jones <kepler@stickajones.org>"]
edition = "2018"

[dependencies]
clap = "2.33.0"
prettytable-rs = "0.10.0"
chrono = "0.4"
regex = "1"
ovit = { path = "../ovit" }
tivo-media-file-system = { path = "../tivo-media-file-system" }